<resources>
    <string name="app_name">Aahara</string>
    <string name="enter_your_phone_number_and_we_will_send_an_otp_to_continue">Enter your phone number and we will send an OTP to continue</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="by_continuing_you_agree_to_our">By continuing, you agree to our</string>
    <string name="terms_of_service_poivacy_policy_content_policy">Terms of Service Poivacy Policy Content Policy</string>
    <string name="restaurant_name">Roll Planet</string>
    <string name="location">Ballari</string>
    <string name="items">ITEMS</string>
    <string name="item_name">Paneer</string>
    <string name="ordered_on">Ordered On</string>
    <string name="date">24 Dec 2019 at 6:36 PM</string>
    <string name="total_amt">Total Amount</string>
    <string name="amt">117.00</string>
    <string name="delivered_and_ordered">Delivered and Rated</string>
    <string name="repeat_order">Repeat Order</string>
    <string name="selectccp">Select Country Code</string>

    <string name="food_order">Food Orders</string>
    <string name="your_order">Your Order</string>
    <string name="address_book">Address Book</string>
    <string name="favorite_order">Favorite Orders</string>
    <string name="online_ordaring">Online Ordering Help</string>
    <string name="about">About Us</string>
    <string name="logout">Log Out</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="rate_us">Rate us on the Play Store</string>
    <string name="settings">Settings</string>
    <string name="add_place">Add a Place</string>
    <string name="text_add_place">In case we are missinig something</string>
    <string name="place_you_have">Places you have added</string>
    <string name="text_place_you_have">See all the places you have added so far</string>
    <string name="find_zomato">Find Friends on Zomato</string>
    <string name="text_find_zomato">You need them everywhere</string>
    <string name="Edit_profile">Edit profile</string>
    <string name="text_Edit_profile">Change Your name,description and profile photo</string>
    <string name="notification_settings">Notification settings</string>
    <string name="text_notification_settings">Define what alerts and notifications you want to see</string>
    <string name="connected_accounts">Connected Accounts</string>
    <string name="text_connected_accounts">Facebook permission</string>
    <string name="privacy">Privacy</string>
    <string name="text_privacy">Hide your profile from search engines</string>
    <string name="Account_settings">Accounts Settings</string>
    <string name="text_Account_settings">Change your email or delete your account.</string>
    <string name="personal_details">Personal Details</string>
    <string name="tell_us">Tell us a bit more about yourself</string>
    <string name="name">Name</string>
    <string name="email_1">Email</string>
    <string name="bt_continue">Continue</string>
    <string name="err_msg_name">Enter your Name</string>
    <string name="err_msg_email">Enter your valid Email</string>
    <string name="ahara">ಆಹಾರ್</string>
    <string name="Menu">Menu</string>
    <string name="Close">Close</string>


    <string name="manage_cart">Manage Cart Items</string>
    <string name="tax_amt">Tax Amount</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="coupon">Have a Discount Coupon?</string>
    <string name="coupon_applied">Applied coupon</string>
    <string name="total_payable">Total Payable Amount</string>
    <string name="information">INFORMATION</string>
    <string name="how_it_works">How it Works</string>
    <string name="contact_us">Contact Us</string>
    <string name="faqs">Faq\'s</string>
    <string name="email">jaffer@gmail.com</string>
    <string name="inserted_successfully">Inserted Successfully</string>

    <string name="Rs">₹</string>
    <string name="select_address">Select Address</string>
    <string name="add_new">Add New</string>
    <string name="select_order_type">Select Order Type</string>
    <string name="home_delivery">Home Delivery</string>
    <string name="select_payment_method">Select Payment Type</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD159uiANl0I6N4Q7JAPUjFuL5q4GJ8JL8</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="enter_name">Please Enter Name</string>
    <string name="enter_mail">Please Enter Email</string>
    <string name="save_changes">Save Changes</string>
    <string name="profile_toolbar">Profile</string>
    <string name="closed">Closed For Delivery</string>
    <string name="order_summary">Order Summary</string>
    <string name="address">Address</string>
    <string name="payment_status">Payment Status</string>
    <string name="item_total">Item Total</string>
    <string name="total">Total</string>
    <string name="order_details">Order Details</string>
    <string name="order_no">Order Number</string>
    <string name="order_num">123455590</string>
    <string name="payment">Payment</string>
    <string name="incomplete">Incomplete</string>
    <string name="phone_number">Phone Number</string>
    <string name="deliver_to">Deliver to</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="coupon_charges">Coupon Charges</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="no_address">No Address</string>
    <string name="confirm_address">Confirm Address</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="Invalid_Otp">Invalid Otp</string>
    <string name="contact1">Most of the answers for your Questions available at our FAQ section,</string>
    <string name="contact2">Frequently asked Questions</string>
    <string name="contact3">If you have any queries you can directly get in. touch with us</string>
    <string name="contact6">Most of the answers for your Questions lavailable at our FAQ section</string>
    <string name="contact8">If you have any queries you can directly get in touch with us</string>
    <string name="want_to_know">Want To Know How You Can Order Online?</string>
    <string name="service">Service Provider will get your tasty food @ your Comfort.</string>
    <string name="online_food">Aahara is an online food ordering portal which consist of</string>
    <string name="one_step">The varied menus of all the food joints enisted on it. The website acts as a one-step go platform for users who wish to order food. online. The website releases users from the humdrum of carrying printed menu cards and searching for restaurantt phone numnbers.</string>
    <string name="easy">The easy and appealing u of the website allows the users to order the food of their</string>
    <string name="select_city">Select City</string>
    <string name="cancel_order">Cancel order</string>
    <string name="work_delivery">Work delivery</string>
    <string name="other_delivery">Other delivery</string>
    <string name="rupee">₹</string>
    <string name="details">View Details</string>
    <string name="update_location">Update Location</string>
    <string name="pending">pending</string>
    <string name="fcm_message" />
    <string name="default_notification_channel_id" />
    <string name="place_order">Place Order</string>
    <string name="payusingupi">Pay using UPI</string>

</resources>
