<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?selectableItemBackground"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bacground_card"
        android:elevation="@dimen/_5sdp"
        android:padding="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_2sdp"
        app:cardElevation="@dimen/_5sdp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:id="@+id/rl_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5dp">


            <LinearLayout
                android:id="@+id/ll_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@drawable/bacground_card">

                        <ImageView
                            android:id="@+id/iv_logo"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_50sdp"
                            android:scaleType="fitXY"
                            android:src="@drawable/white_image" />
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/_10sdp"
                        android:layout_weight="3"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_shop_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/playfairdisplay_regular"
                            android:text="@string/restaurant_name"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_14ssp" />

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">


                            <TextView
                                android:id="@+id/tv_location"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_toLeftOf="@+id/tv_details"
                                android:fontFamily="@font/poppins_regular"
                                android:text="@string/location"
                                android:textColor="@color/text"
                                android:textSize="@dimen/_12ssp" />


                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@color/background_steps" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/items"
                        android:textColor="@color/text"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/tv_items"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/item_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/ordered_on"
                        android:textAllCaps="true"
                        android:textColor="@color/text"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/tv_ordered_on"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/date"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/total_amt"
                        android:textAllCaps="true"
                        android:textColor="@color/text"
                        android:textSize="@dimen/_12ssp" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="₹ "
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />
                    <TextView
                        android:id="@+id/tv_total_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:text="@string/amt"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />
</LinearLayout>
                    <TextView
                        android:id="@+id/tv_closed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/closed"
                        android:textColor="@color/red"
                        android:textSize="@dimen/_10ssp"
                        android:visibility="gone" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:background="@color/background_steps" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_item"
                android:padding="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/cancel_order_bg">

                    <TextView
                        android:id="@+id/tv_cancel_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:text="Cancel order"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/redtext"
                        android:textSize="@dimen/_14ssp"
                        android:visibility="gone" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">


                    <TextView
                        android:id="@+id/tv_delivered_and_rated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/delivered_and_ordered"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/tv_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="*4"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_cancel_ord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:drawablePadding="@dimen/_50sdp"
                    android:enabled="false"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/cancel_order"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone" />
                <TextView
                    android:id="@+id/tv_order_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:drawablePadding="@dimen/_50sdp"
                    android:enabled="false"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/pending"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_repeat_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:drawableLeft="@drawable/ic_replay_black_24dp"
                    android:drawablePadding="@dimen/_5sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/repeat_order"
                    android:textColor="@color/redtext"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/details"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_12ssp" />
            </RelativeLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>